# oasis-os

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  docker-compose.yml
.githooks/: pre-commit
.github/workflows/: ci.yml  (+2 more)
crates/oasis-app/: Cargo.toml
crates/oasis-app/src/: app_state.rs  commands.rs  input.rs  launch.rs  main.rs  render.rs  screenshot.rs  screenshot_tests.rs  terminal_sdi.rs  vfs_setup.rs
crates/oasis-audio/: Cargo.toml
crates/oasis-audio/src/: manager.rs  null_backend.rs  playlist.rs
crates/oasis-backend-psp/: Cargo.toml
crates/oasis-backend-psp/.cargo/: config.toml
crates/oasis-backend-psp/src/: audio.rs  commands.rs  filesystem.rs  font.rs  input.rs  lib.rs  main.rs  network.rs  power.rs  procedural.rs  render.rs  sfx.rs  status.rs  textures.rs  threading.rs  tls.rs
crates/oasis-browser/: Cargo.toml
crates/oasis-browser/benches/: css_cascade.rs  html_parsing.rs  layout_engine.rs  paint.rs
crates/oasis-browser/src/: commands.rs  config.rs  image.rs  lib.rs  paint.rs  plugin.rs  reader.rs  skin.rs  test_utils.rs
crates/oasis-browser/src/css/: cascade.rs  mod.rs  values.rs
crates/oasis-browser/src/gemini/: mod.rs  renderer.rs
crates/oasis-browser/src/html/: entities.rs  mod.rs
crates/oasis-browser/src/layout/: block.rs  box_model.rs  float.rs  inline.rs  table.rs  text.rs
crates/oasis-browser/src/loader/: cache.rs  gemini_fetch.rs  http.rs  mod.rs  vfs.rs
crates/oasis-core/: Cargo.toml
crates/oasis-core/benches/: css_cascade.rs  html_parsing.rs  layout_engine.rs  paint.rs  sdi_registry.rs  vfs.rs
crates/oasis-core/fuzz/: Cargo.toml  README.md
crates/oasis-core/fuzz/corpus/css_parser/: edge.css  simple.css
crates/oasis-core/fuzz/corpus/gemini_parser/: simple.gmi
crates/oasis-core/fuzz/corpus/html_tokenizer/: edge.html  tags.html
crates/oasis-core/fuzz/corpus/http_response/: not_found_404  ok_200  redirect_301
crates/oasis-core/fuzz/corpus/skin_toml/: manifest.toml
crates/oasis-core/fuzz/fuzz_targets/: css_parser.rs  gemini_parser.rs  html_tokenizer.rs  http_response.rs  pbp_parser.rs  skin_toml.rs
crates/oasis-core/src/: active_theme.rs  backend.rs  bottombar.rs  cursor.rs  error.rs  lib.rs  startmenu.rs  statusbar.rs  theme.rs  wallpaper.rs
crates/oasis-core/src/agent/: health.rs
crates/oasis-core/src/apps/: runner.rs
crates/oasis-core/src/audio/: manager.rs  playlist.rs
crates/oasis-core/src/browser/: commands.rs  config.rs  image.rs  mod.rs  nav.rs  paint.rs  plugin.rs  reader.rs  scroll.rs  skin.rs  test_utils.rs
crates/oasis-core/src/browser/css/: cascade.rs  default.rs  parser.rs  tokenizer.rs  values.rs
crates/oasis-core/src/browser/gemini/: parser.rs  renderer.rs
crates/oasis-core/src/browser/html/: dom.rs  tokenizer.rs  tree_builder.rs
crates/oasis-core/src/browser/layout/: block.rs  box_model.rs  inline.rs  mod.rs  table.rs  text.rs
crates/oasis-core/src/browser/loader/: cache.rs  gemini_fetch.rs  http.rs  mod.rs  vfs.rs
crates/oasis-core/src/dashboard/: discovery.rs  mod.rs
crates/oasis-core/src/net/: client.rs  listener.rs  std_backend.rs  tests.rs  tls.rs  tls_rustls.rs
crates/oasis-core/src/osk/: keyboard.rs
crates/oasis-core/src/platform/: mod.rs  services.rs  tests.rs
crates/oasis-core/src/plugin/: examples.rs  manager.rs
crates/oasis-core/src/script/: mod.rs
crates/oasis-core/src/sdi/: helpers.rs  object.rs  registry.rs
crates/oasis-core/src/skin/: builtin.rs  corrupted.rs  effects.rs  loader.rs  mod.rs  theme.rs
crates/oasis-core/src/terminal/: agent_commands.rs  audio_commands.rs  commands.rs  interpreter.rs  mod.rs  network_commands.rs  plugin_commands.rs  skin_commands.rs
crates/oasis-core/src/transfer/: mod.rs
crates/oasis-core/src/transition/: mod.rs
crates/oasis-core/src/ui/: animation.rs  avatar.rs  badge.rs  button.rs  card.rs  color.rs  context.rs  divider.rs  icon.rs  input_field.rs  layout.rs  list_view.rs  mod.rs  nine_patch.rs  panel.rs  progress_bar.rs  scroll_view.rs  shadow.rs  tab_bar.rs  text_block.rs  theme.rs  toggle.rs  widget.rs
crates/oasis-core/src/update/: mod.rs
crates/oasis-core/src/vfs/: memory.rs
crates/oasis-core/src/wm/: hit_test.rs  manager.rs  window.rs
crates/oasis-net/: Cargo.toml
crates/oasis-net/src/: client.rs  hosts.rs  lib.rs  listener.rs  std_backend.rs  tests.rs  tls.rs  tls_rustls.rs
crates/oasis-plugin-psp/: Cargo.toml
crates/oasis-plugin-psp/src/: audio.rs  config.rs  font.rs  hook.rs  lib.rs  main.rs  overlay.rs  render.rs
crates/oasis-sdi/: Cargo.toml
crates/oasis-sdi/benches/: sdi_registry.rs
crates/oasis-sdi/src/: helpers.rs  object.rs  registry.rs
crates/oasis-skin/: Cargo.toml
crates/oasis-skin/src/: active_theme.rs  builtin.rs  corrupted.rs  effects.rs  legacy_theme.rs  lib.rs  loader.rs  theme.rs
crates/oasis-terminal/: Cargo.toml
crates/oasis-terminal/src/: audio_commands.rs  commands.rs  dev_commands.rs  doc_commands.rs  file_commands.rs  fun_commands.rs  interpreter.rs  lib.rs  network_commands.rs  security_commands.rs  skin_commands.rs  system_commands.rs  text_commands.rs  ui_commands.rs
crates/oasis-types/: Cargo.toml
crates/oasis-types/src/: backend.rs  bitmap_font.rs  input.rs  lib.rs  shadow.rs  tls.rs
crates/oasis-ui/: Cargo.toml
crates/oasis-ui/src/: animation.rs  avatar.rs  badge.rs  button.rs  card.rs  context.rs  divider.rs  flex.rs  icon.rs  input_field.rs  layout.rs  lib.rs  list_view.rs  nine_patch.rs  panel.rs  progress_bar.rs  scroll_view.rs  tab_bar.rs  test_utils.rs  text_block.rs  theme.rs  toggle.rs  widget.rs
crates/oasis-vfs/: Cargo.toml
crates/oasis-vfs/benches/: vfs.rs
crates/oasis-vfs/src/: game_asset.rs  lib.rs  memory.rs  real.rs
crates/oasis-wm/: Cargo.toml
crates/oasis-wm/src/: hit_test.rs  manager.rs  window.rs
docker/: rust-ci.Dockerfile
docs/: design.md  psp-modernization-plan.md  psp-plugin.md  rustls-tls13-plan.md  skin-authoring.md  terminal-commands-expansion-plan.md  testing-gap-analysis.md
scripts/: psp-scenarios.md  psp-screenshot.sh
(+29 files in other folders)
