[package]
name = "oasis-app"
description = "Desktop entry point for OASIS_OS"
default-run = "oasis-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "oasis-app"
path = "src/main.rs"

[[bin]]
name = "oasis-screenshot"
path = "src/screenshot.rs"

[[bin]]
name = "screenshot-tests"
path = "src/screenshot_tests.rs"

[dependencies]
oasis-core = { workspace = true }
oasis-backend-sdl = { path = "../oasis-backend-sdl" }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
png = { workspace = true }

[lints]
workspace = true
