# Standalone crate -- excluded from the oasis_os workspace because it
# requires the mipsel-sony-psp target and the rust-psp SDK.
# Build with: RUST_PSP_BUILD_STD=1 cargo +nightly psp --release

[workspace]

[package]
name = "oasis-backend-psp"
description = "PSP backend for OASIS_OS: hardware-accelerated GU rendering, controller input"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/AndrewAltimit/oasis-os"
authors = ["AndrewAltimit"]

[dependencies]
psp = { git = "https://github.com/AndrewAltimit/rust-psp", branch = "main", features = ["kernel", "std"] }
oasis-core = { path = "../oasis-core" }
libm = "0.2"

# TLS for HTTPS/Gemini (pure Rust, no C/asm, works on mipsel-sony-psp)
embedded-tls = { version = "0.18", default-features = false, features = ["std", "log"] }
embedded-io = { version = "0.7", features = ["std"] }
rand_core = "0.6"
webpki = { version = "0.22", default-features = false, features = ["std"] }

# getrandom does not support mipsel-sony-psp natively. We provide custom
# backends that use the PSP's hardware MT19937 PRNG via sceKernelUtils.
# v0.2: custom backend via Cargo feature + register_custom_getrandom! macro.
# v0.3: custom backend via --cfg getrandom_backend="custom" in .cargo/config.toml.
getrandom_02 = { package = "getrandom", version = "0.2", features = ["custom"] }
getrandom = "0.3"

# unicode-width workaround for mips target panic.
[patch.crates-io]
unicode-width = { git = "https://git.sr.ht/~sajattack/unicode-width" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
# Do NOT set strip = true -- it conflicts with --emit-relocs needed by prxgen.

[profile.dev]
opt-level = 1
