[package]
name = "oasis-browser"
description = "HTML/CSS/Gemini browser engine for OASIS_OS"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
oasis-types = { workspace = true }
oasis-vfs = { workspace = true }
oasis-net = { workspace = true }
oasis-skin = { workspace = true }
oasis-terminal = { workspace = true }
serde = { workspace = true }
log = { workspace = true }

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "html_parsing"
harness = false

[[bench]]
name = "css_cascade"
harness = false

[[bench]]
name = "layout_engine"
harness = false

[[bench]]
name = "paint"
harness = false

[lints]
workspace = true
