[package]
name = "oasis-core"
description = "Platform-agnostic core framework for OASIS_OS: scene graph, backend traits, input, config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
tls-rustls = ["dep:rustls", "dep:webpki-roots", "dep:rustls-pki-types"]

[dependencies]
oasis-types = { workspace = true }
oasis-vfs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

# TLS (optional, enabled by backends that have TLS support)
rustls = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }
rustls-pki-types = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
rcgen = "0.13"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "html_parsing"
harness = false

[[bench]]
name = "css_cascade"
harness = false

[[bench]]
name = "layout_engine"
harness = false

[[bench]]
name = "paint"
harness = false

[[bench]]
name = "sdi_registry"
harness = false

[lints]
workspace = true
