[package]
name = "oasis-core"
description = "Platform-agnostic core framework for OASIS_OS: scene graph, backend traits, input, config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
tls-rustls = ["oasis-net/tls-rustls"]

[dependencies]
oasis-types = { workspace = true }
oasis-vfs = { workspace = true }
oasis-platform = { workspace = true }
oasis-sdi = { workspace = true }
oasis-net = { workspace = true }
oasis-audio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "html_parsing"
harness = false

[[bench]]
name = "css_cascade"
harness = false

[[bench]]
name = "layout_engine"
harness = false

[[bench]]
name = "paint"
harness = false

[lints]
workspace = true
