[package]
name = "oasis-core"
description = "Platform-agnostic core framework for OASIS_OS: scene graph, backend traits, input, config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
tls-rustls = ["oasis-net/tls-rustls"]

[dependencies]
oasis-types = { workspace = true }
oasis-vfs = { workspace = true }
oasis-platform = { workspace = true }
oasis-sdi = { workspace = true }
oasis-net = { workspace = true }
oasis-audio = { workspace = true }
oasis-ui = { workspace = true }
oasis-wm = { workspace = true }
oasis-skin = { workspace = true }
oasis-terminal = { workspace = true }
oasis-browser = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
proptest = "1"

[lints]
workspace = true
