[package]
name = "oasis-net"
description = "Networking: TCP backend, remote terminal, TLS for OASIS_OS"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
tls-rustls = ["dep:rustls", "dep:webpki-roots", "dep:rustls-pki-types"]

[dependencies]
oasis-types = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
log = { workspace = true }

# TLS (optional)
rustls = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }
rustls-pki-types = { workspace = true, optional = true }

[dev-dependencies]
rcgen = "0.13"

[lints]
workspace = true
