[package]
name = "oasis-types"
description = "Foundation types and traits for OASIS_OS: colors, input events, backend traits, config, errors"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
